--- a/BookStore.Domain/packages.config
+++ b/BookStore.Domain/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DataExtractingSDK" version="1.0.1" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
 </packages>
