--- a/BookStore/packages.config
+++ b/BookStore/packages.config
@@ -3,7 +3,7 @@
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
   <package id="DataExtractingSDK" version="1.0.1" targetFramework="net45" />
   <package id="DotNetXmlHttpRequest" version="2.0.0.0" targetFramework="net45" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.1" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.9.1" targetFramework="net45" />
   <package id="GoogleCustomSearchEngine" version="2.0.0" targetFramework="net45" />
@@ -33,7 +33,9 @@
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
 </packages>
