--- a/BookStore.Domain/BookStore.Domain.csproj
+++ b/BookStore.Domain/BookStore.Domain.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Entities\Author.cs" />
     <Compile Include="Entities\Book.cs" />
+    <Compile Include="Entities\BookViewModel.cs" />
     <Compile Include="Entities\Genre.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
