--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -357,6 +357,7 @@
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Admin\Create.cshtml" />
     <Content Include="Views\Admin\FindBookImage.cshtml" />
+    <Content Include="Views\Admin\AuthorsView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
