User, Tag, Rate in Model + relations

--- a/BookStore.Domain/BookStore.Domain.csproj
+++ b/BookStore.Domain/BookStore.Domain.csproj
@@ -79,7 +79,9 @@
     <Compile Include="Entities\Author.cs" />
     <Compile Include="Entities\Book.cs" />
     <Compile Include="Entities\BookViewModel.cs" />
-    <Compile Include="Entities\Genre.cs" />
+    <Compile Include="Entities\Rate.cs" />
+    <Compile Include="Entities\Tag.cs" />
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
