--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -52,7 +52,8 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="GAPI">
+    <Reference Include="GAPI, Version=0.5.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\GAPI\GAPI.dll</HintPath>
     </Reference>
     <Reference Include="Google.Apis">
@@ -61,11 +62,20 @@
     <Reference Include="Google.Apis.Core">
       <HintPath>..\packages\Google.Apis.Core.1.9.1\lib\portable-net40+sl50+win+wpa81+wp80\Google.Apis.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Google.Apis.Customsearch.v1">
+      <HintPath>..\packages\Google.Apis.Customsearch.v1.1.9.0.460\lib\portable-net40+sl50+win+wpa81+wp80\Google.Apis.Customsearch.v1.dll</HintPath>
+    </Reference>
     <Reference Include="Google.Apis.PlatformServices">
       <HintPath>..\packages\Google.Apis.1.9.1\lib\net40\Google.Apis.PlatformServices.dll</HintPath>
     </Reference>
     <Reference Include="GoogleCSE">
       <HintPath>..\packages\GoogleCustomSearchEngine.2.0.0\lib\net45\GoogleCSE.dll</HintPath>
+    </Reference>
+    <Reference Include="GoogleSearchAPI.Compact">
+      <HintPath>..\packages\bin\Compact\GoogleSearchAPI.Compact.dll</HintPath>
+    </Reference>
+    <Reference Include="GoogleSearchDotnet">
+      <HintPath>..\packages\GoogleSearchDotNetApi\GoogleSearchDotnet.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -206,6 +216,7 @@
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\PagingInfo.cs" />
     <Compile Include="Models\WikiParser.cs" />
+    <Compile Include="Models\YandexSearchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
