--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -22,7 +22,7 @@
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" >
+      <forms loginUrl="~/Account/Login" timeout="2880">
         <credentials passwordFormat="Clear">
           <user name="admin" password="secret" />
         </credentials>
@@ -119,4 +119,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<system.net>
+    <settings>
+        <servicePointManager expect100Continue="false" />
+    </settings>
+</system.net>
 </configuration>
