--- a/BookStore/packages.config
+++ b/BookStore/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.1" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.9.1" targetFramework="net45" />
+  <package id="Google.Apis.Customsearch.v1" version="1.9.0.460" targetFramework="net45" />
   <package id="GoogleCustomSearchEngine" version="2.0.0" targetFramework="net45" />
   <package id="GoogleSearchApi" version="1.0.1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
