--- a/BookStore.Domain/BookStore.Domain.csproj
+++ b/BookStore.Domain/BookStore.Domain.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Entities\Book.cs" />
     <Compile Include="Entities\BookViewModel.cs" />
     <Compile Include="Entities\Rate.cs" />
+    <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\Tag.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Migrations\Configuration.cs" />
