--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -40,11 +40,18 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    
-    
-    
-    
-    
+    <membership defaultProvider="MyMembershipProvider">
+      <providers>
+        <clear/>
+        <add name="MyMembershipProvider" type="BookStore.Infrastructure.CustomMembershipProvider" />
+      </providers>
+    </membership>
+    <roleManager enabled="true" defaultProvider="MyRoleProvider">
+      <providers>
+        <clear/>
+        <add name="MyRoleProvider" type="BookStore.Infrastructure.CustomRoleProvider" />
+      </providers>
+    </roleManager>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
