--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -188,11 +188,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlHelpers\AjaxImageLink.cs" />
+    <Compile Include="HtmlHelpers\AlphabeticPager.cs" />
     <Compile Include="HtmlHelpers\PagingHelpers.cs" />
     <Compile Include="HtmlHelpers\DecimalHelper.cs" />
     <Compile Include="Infrastructure\FormsAuthProvider.cs" />
     <Compile Include="Infrastructure\IAuthProvider.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
+    <Compile Include="Models\AlphabeticalViewModel.cs" />
     <Compile Include="Models\BookListViewModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\PagingInfo.cs" />
@@ -359,6 +361,9 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Admin\FindBookAnnotation.cshtml" />
     <Content Include="Views\Admin\EditorTemplates\Tag.cshtml" />
+    <Content Include="Views\Book\Index.cshtml" />
+    <Content Include="Views\Book\Alphabet.cshtml" />
+    <Content Include="Views\Book\ListByLetter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
