--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BookStore.DAL\packages.config" />
   <repository path="..\BookStore.Domain\packages.config" />
   <repository path="..\BookStore\packages.config" />
 </repositories>
