--- a/BookStore.Domain/BookStore.DO.csproj
+++ b/BookStore.Domain/BookStore.DO.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{B52FE83E-5FD1-4ED7-AD08-A003EB187650}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BookStore.Domain</RootNamespace>
-    <AssemblyName>BookStore.Domain</AssemblyName>
+    <RootNamespace>BookStore.DO</RootNamespace>
+    <AssemblyName>BookStore.DO</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -94,25 +94,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\IBookRepository.cs" />
-    <Compile Include="Concrete\EFBookRepository.cs" />
-    <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Entities\Author.cs" />
     <Compile Include="Entities\Book.cs" />
     <Compile Include="Entities\BookViewModel.cs" />
+    <Compile Include="Entities\Comment.cs" />
+    <Compile Include="Entities\Genre.cs" />
     <Compile Include="Entities\Rate.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\Tag.cs" />
     <Compile Include="Entities\User.cs" />
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
