--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -46,12 +46,12 @@
         <add name="MyMembershipProvider" type="BookStore.Infrastructure.CustomMembershipProvider" />
       </providers>
     </membership>
-    <roleManager enabled="true" defaultProvider="MyRoleProvider">
+    <!--<roleManager enabled="true" defaultProvider="MyRoleProvider">
       <providers>
         <clear/>
         <add name="MyRoleProvider" type="BookStore.Infrastructure.CustomRoleProvider" />
       </providers>
-    </roleManager>
+    </roleManager>-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
