--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -180,6 +180,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Controllers\AdminController.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\NavigationController.cs" />
     <Compile Include="Global.asax.cs">
@@ -189,9 +195,12 @@
     <Compile Include="HtmlHelpers\AlphabeticPager.cs" />
     <Compile Include="HtmlHelpers\PagingHelpers.cs" />
     <Compile Include="HtmlHelpers\DecimalHelper.cs" />
-    <Compile Include="Infrastructure\FormsAuthProvider.cs" />
-    <Compile Include="Infrastructure\IAuthProvider.cs" />
-    <Compile Include="Infrastructure\IStoreReposirory.cs" />
+    <Compile Include="Infrastructure\CustomMembershipProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Infrastructure\CustomRoleProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\AlphabeticalViewModel.cs" />
     <Compile Include="Models\BookListViewModel.cs" />
