--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -18,6 +18,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="enableSimpleMembership" value="false"/>
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -40,18 +41,19 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <membership defaultProvider="MyMembershipProvider">
+    <!--<membership defaultProvider="MyMembershipProvider">
       <providers>
-        <clear/>
+        <clear />
         <add name="MyMembershipProvider" type="BookStore.Infrastructure.CustomMembershipProvider" />
       </providers>
     </membership>
-    <!--<roleManager enabled="true" defaultProvider="MyRoleProvider">
+    <roleManager enabled="true" defaultProvider="MyRoleProvider">
       <providers>
-        <clear/>
+        <clear />
         <add name="MyRoleProvider" type="BookStore.Infrastructure.CustomRoleProvider" />
       </providers>
     </roleManager>-->
+    <roleManager enabled="true" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
