--- a/BookStore.BLL.RepositoryService/BookStore.BLL.RepositoryService.csproj
+++ b/BookStore.BLL.RepositoryService/BookStore.BLL.RepositoryService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9C9BE9DA-C07E-4CFA-BF31-1B527B6C3B39}</ProjectGuid>
+    <ProjectGuid>{C5FE34FE-4A88-4A8A-8AB5-20640C99A2D3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BookStore.DAL</RootNamespace>
-    <AssemblyName>BookStore.DAL</AssemblyName>
+    <RootNamespace>BookStore.BLL.RepositoryService</RootNamespace>
+    <AssemblyName>BookStore.BLL.RepositoryService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,25 +42,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\IAuthorRepository.cs" />
-    <Compile Include="Abstract\IBookRepository.cs" />
-    <Compile Include="Abstract\IGenreRepository.cs" />
-    <Compile Include="Abstract\IRoleRepository.cs" />
-    <Compile Include="Abstract\IStoreRepository.cs" />
-    <Compile Include="Abstract\IUserRepository.cs" />
+    <Compile Include="AuthorService.cs" />
+    <Compile Include="BookService.cs" />
+    <Compile Include="GenreService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleService.cs" />
+    <Compile Include="StoreService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BookStore.DAL\BookStore.DAL.csproj">
+      <Project>{9c9be9da-c07e-4cfa-bf31-1b527b6c3b39}</Project>
+      <Name>BookStore.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BookStore.DLL\BookStore.DLL.csproj">
+      <Project>{fd569b25-1c08-4e92-a42d-6bfbcb094c17}</Project>
+      <Name>BookStore.DLL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BookStore.Domain\BookStore.DO.csproj">
       <Project>{b52fe83e-5fd1-4ed7-ad08-a003eb187650}</Project>
       <Name>BookStore.DO</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
