--- a/BookStore.DAL.EntityFramework/BookStore.DAL.EntityFramework.csproj
+++ b/BookStore.DAL.EntityFramework/BookStore.DAL.EntityFramework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9C9BE9DA-C07E-4CFA-BF31-1B527B6C3B39}</ProjectGuid>
+    <ProjectGuid>{84D11725-F35C-4296-A063-39737433FFA5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BookStore.DAL</RootNamespace>
-    <AssemblyName>BookStore.DAL</AssemblyName>
+    <RootNamespace>BookStore.DAL.EntityFramework</RootNamespace>
+    <AssemblyName>BookStore.DAL.EntityFramework</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,15 +48,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\IAuthorRepository.cs" />
-    <Compile Include="Abstract\IBookRepository.cs" />
-    <Compile Include="Abstract\IGenreRepository.cs" />
-    <Compile Include="Abstract\IRoleRepository.cs" />
-    <Compile Include="Abstract\IStoreRepository.cs" />
-    <Compile Include="Abstract\IUserRepository.cs" />
+    <Compile Include="EfAuthorRepository.cs" />
+    <Compile Include="EfBookRepository.cs" />
+    <Compile Include="EfDbContext.cs" />
+    <Compile Include="EfGenreRepository.cs" />
+    <Compile Include="EfRoleRepository.cs" />
+    <Compile Include="EfStoreRepository.cs" />
+    <Compile Include="EfUserRepository.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BookStore.DAL\BookStore.DAL.csproj">
+      <Project>{9c9be9da-c07e-4cfa-bf31-1b527b6c3b39}</Project>
+      <Name>BookStore.DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BookStore.Domain\BookStore.DO.csproj">
       <Project>{b52fe83e-5fd1-4ed7-ad08-a003eb187650}</Project>
       <Name>BookStore.DO</Name>
@@ -59,7 +72,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
