--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -6,8 +6,9 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=BookStore; Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-BookStore-20150330185755;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-BookStore-20150330185755.mdf" />
@@ -41,33 +42,34 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    
+
     <membership defaultProvider="MyMembershipProvider">
       <providers>
         <clear />
         <add name="MyMembershipProvider" type="BookStore.Infrastructure.CustomMembershipProvider" />
       </providers>
     </membership>
-    
+
     <roleManager enabled="true" defaultProvider="MyRoleProvider">
       <providers>
         <clear />
         <add name="MyRoleProvider" type="BookStore.Infrastructure.CustomRoleProvider" />
       </providers>
     </roleManager>
-    
+
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    
-  <handlers>
+
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">      
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
@@ -103,6 +105,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.VisualStudio.Web.PageInspector.Runtime" publicKeyToken="b03f5f7f11d50a3a" />
+        <bindingRedirect oldVersion="0.0.0.0-14.0.0.0" newVersion="12.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
