--- a/BookStore/packages.config
+++ b/BookStore/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="DataExtractingSDK" version="1.0.1" targetFramework="net45" />
   <package id="DotNetXmlHttpRequest" version="2.0.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
@@ -35,6 +36,7 @@
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
 </packages>
