--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BookStore.BLL.RepositoryService\packages.config" />
+  <repository path="..\BookStore.DAL.EntityFramework\packages.config" />
   <repository path="..\BookStore.DAL\packages.config" />
+  <repository path="..\BookStore.DLL\packages.config" />
   <repository path="..\BookStore.Domain\packages.config" />
   <repository path="..\BookStore\packages.config" />
 </repositories>
