--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -318,12 +318,12 @@
     <Content Include="Content\Admin.css.map">
       <DependentUpon>Admin.css</DependentUpon>
     </Content>
+    <Content Include="log.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\AddField.js" />
     <Content Include="Scripts\bootstrap.min.js.map">
       <DependentUpon>bootstrap.min.js</DependentUpon>
-    </Content>
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
