--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -6,10 +6,38 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  
+
+  <log4net debug="true">
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="logs\log.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL" /> 
+      <level value="DEBUG" />
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
+    <logger name="PerformanceLogger">
+      <level value="ALL" />
+      <appender-ref ref="PerformanceFileAppender" />
+    </logger>
+    <logger name="ErrorLogger">
+      <level value="ALL" />
+      <appender-ref ref="ErrorFileAppender" />
+    </logger>
+  </log4net>
+
   <connectionStrings>
     <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Book; Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
