Tests + better comment

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,5 +5,6 @@
   <repository path="..\BookStore.DAL\packages.config" />
   <repository path="..\BookStore.DLL\packages.config" />
   <repository path="..\BookStore.Domain\packages.config" />
+  <repository path="..\BookStore.Tests\packages.config" />
   <repository path="..\BookStore\packages.config" />
 </repositories>
