--- a/BookStore/Views/Web.config
+++ b/BookStore/Views/Web.config
@@ -50,7 +50,9 @@
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-
+    <staticContent>
+      <mimeMap fileExtension=".fb2" mimeType="text/xml"/>
+    </staticContent>
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
